# auto-tong

./: .gitignore  CLAUDE.md  TODO.md  check-prism.ps1  package-lock.json  package.json  test-notify.bat
.github/workflows/: release.yml
src/: index.html  main.js  style.css  update-blocked.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  java.rs  lib.rs  main.rs  mrpack.rs  prismlauncher.rs  tracker.rs  tray.rs  watcher.rs  zip_util.rs
