[package]
name = "auto-tong"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "8"
dirs = "6"
zip = "2"
walkdir = "2"
log = "0.4"
simplelog = "0.12"
tokio = { version = "1", features = ["fs", "process", "sync", "time", "rt-multi-thread", "macros"] }
