[package]
name = "auto-tong"
version = "0.2.6"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "8"
dirs = "6"
zip = "2"
walkdir = "2"
tauri-plugin-updater = "2"
log = "0.4"
simplelog = "0.12"
tokio = { version = "1", features = ["fs", "process", "sync", "time", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
sha2 = "0.10"
arboard = "3"
tauri-plugin-single-instance = "2"
